final project submission

--- a/templates/admin/question/admin_single_question.html
+++ b/templates/admin/question/admin_single_question.html
@@ -49,13 +49,13 @@ content %}{% include "admin/admin_wrapper.html" %}
         endif %}
       </p>
       <p class="col-12 col-sm-6">
-        <strong>Last Updated At:</strong> {% if sub %}{{ sub.updated_at }}{%
+        <strong>Last Updated At:</strong> {% if sub %}{{ sub.updated_at.strftime('%Y-%m-%d') }}{%
         else %}N/a{% endif %}
       </p>
     </div>
     <div class="row">
       <p class="col-12 col-sm-6">
-        <strong>Created At:</strong> {% if sub %}{{ sub.created_at }}{% else
+        <strong>Created At:</strong> {% if sub %}{{ sub.created_at.strftime('%Y-%m-%d') }}{% else
         %}N/a{% endif %}
       </p>
     </div>
@@ -88,13 +88,13 @@ content %}{% include "admin/admin_wrapper.html" %}
         }}{% else %}N/a{% endif %}
       </p>
       <p class="col-12 col-sm-6">
-        <strong>Last Updated At:</strong> {% if chap %}{{ chap.updated_at }}{%
+        <strong>Last Updated At:</strong> {% if chap %}{{ chap.updated_at.strftime('%Y-%m-%d') }}{%
         else %}N/a{% endif %}
       </p>
     </div>
     <div class="row">
       <p class="col-12 col-sm-6">
-        <strong>Created At:</strong> {% if chap %}{{ chap.created_at }}{% else
+        <strong>Created At:</strong> {% if chap %}{{ chap.created_at.strftime('%Y-%m-%d') }}{% else
         %}N/a{% endif %}
       </p>
     </div>
@@ -117,8 +117,8 @@ content %}{% include "admin/admin_wrapper.html" %}
         else %}N/a{% endif %}
       </p>
       <p class="col-12 col-sm-6">
-        <strong>Quiz Duration:</strong> {% if quiz %}{{
-        (quiz.time_duration|int)/3600000 }} Hour{% else %}N/a{% endif %}
+        <strong>Quiz Duration:</strong> {% if quiz %}{{ quiz.time_duration }} {{
+        quiz.time_unit }} Hour{% else %}N/a{% endif %}
       </p>
     </div>
     <div class="row">
@@ -126,9 +126,9 @@ content %}{% include "admin/admin_wrapper.html" %}
         <strong>Remarks:</strong> {% if quiz %}{{ quiz.remarks }}{% else %}N/a{%
         endif %}
       </p>
-      <p class="col-12 col-sm-6">
-        <strong>Number of Questions:</strong> {% if quiz %}{{
-        quiz.number_of_questions }}{% else %}N/a{% endif %}
+      <p class="col-12 col-sm-6 {{"active" if quiz.is_active else "notactive"}}">
+        <strong>Status:</strong> {% if quiz %}{{ "Active" if quiz.is_active else
+        "Not-Active" }}{% else %}N/a{% endif %}
       </p>
     </div>
     <div class="row">
@@ -137,13 +137,13 @@ content %}{% include "admin/admin_wrapper.html" %}
         %}N/a{% endif %}
       </p>
       <p class="col-12 col-sm-6">
-        <strong>Last Updated At:</strong> {% if quiz %}{{ quiz.updated_at }}{%
+        <strong>Last Updated At:</strong> {% if quiz %}{{ quiz.updated_at.strftime('%Y-%m-%d') }}{%
         else %}N/a{% endif %}
       </p>
     </div>
     <div class="row">
       <p class="col-12 col-sm-6">
-        <strong>Created At:</strong> {% if quiz %}{{ quiz.created_at }}{% else
+        <strong>Created At:</strong> {% if quiz %}{{ quiz.created_at.strftime('%Y-%m-%d') }}{% else
         %}N/a{% endif %}
       </p>
     </div>
@@ -193,10 +193,10 @@ content %}{% include "admin/admin_wrapper.html" %}
     <div class="row">
       <p class="col-12 col-sm-6">
         <strong>Last Updated At:</strong> {% if question %}{{
-        question.updated_at }}{% else %}N/a{% endif %}
+        question.updated_at.strftime('%Y-%m-%d') }}{% else %}N/a{% endif %}
       </p>
       <p class="col-12 col-sm-6">
-        <strong>Created At:</strong> {% if question %}{{ question.created_at
+        <strong>Created At:</strong> {% if question %}{{ question.created_at.strftime('%Y-%m-%d')
         }}{% else %}N/a{% endif %}
       </p>
     </div>
