--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,3 +54,116 @@
 .button {
   background-color: #6949fd !important;
 }
+
+#title {
+  display: block;
+}
+
+#smallTitle {
+  display: none;
+}
+
+.active {
+  color: green;
+  font-weight: bold;
+}
+
+.notactive {
+  color: red;
+  font-weight: bold;
+}
+
+#toggle {
+  display: none;
+}
+
+#toggle-label {
+  display: inline-block;
+  width: 40px;
+  height: 20px;
+  background-color: #ccc;
+  border-radius: 10px;
+  position: relative;
+  cursor: pointer;
+  margin-left: 32px;
+}
+
+#toggle-label::before {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 16px;
+  height: 16px;
+  background-color: white;
+  border-radius: 50%;
+  transition: transform 0.3s;
+}
+
+#toggle:checked + label {
+  background-color: #2196f3;
+}
+
+#toggle:checked + label::before {
+  transform: translateX(20px);
+}
+
+.guage-chart-container {
+  position: relative;
+  width: 150px;
+  height: 150px;
+}
+
+.guage-chart-label {
+  position: absolute;
+  bottom: 50px;
+  left: 35%;
+}
+
+.score-factor {
+  position: relative;
+  overflow: hidden;
+}
+
+.sidebar {
+  position: absolute;
+  height: 100%;
+  width: 8px;
+  top: 0;
+  right: 0;
+}
+
+.chart-groups {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.chart-container {
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 600px;
+}
+
+.summary-box {
+  width: 100%;
+  margin: 0 auto !important;
+}
+
+@media screen and (max-width: 768px) {
+  .chart-container {
+    width: 100%;
+  }
+
+  #title {
+    display: none;
+  }
+
+  #smallTitle {
+    display: block;
+  }
+}
