--- a/templates/admin/subjects/admin_subject_manage.html
+++ b/templates/admin/subjects/admin_subject_manage.html
@@ -7,8 +7,8 @@ block content %} {% include "admin/admin_wrapper.html" %}
       <li class="breadcrumb-item">
         <a href="/admin/subject/?skip=0&take=25">Subjects List</a>
       </li>
-      <li class="breadcrumb-item active" aria-current="page">
-        {% if chap %}Update Subject{% else %}New Subject{% endif %}
+      <li class="breadcrumb-item" aria-current="page">
+        {% if sub %}Update Subject{% else %}New Subject{% endif %}
       </li>
     </ol>
   </nav>
@@ -29,13 +29,13 @@ block content %} {% include "admin/admin_wrapper.html" %}
           >
             {{ message }}
             <button
-            type="button"
-            class="close"
-            data-dismiss="alert"
-            aria-label="Close"
-          >
-            <span aria-hidden="true">&times;</span>
-          </button>
+              type="button"
+              class="close"
+              data-dismiss="alert"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
           </div>
           {% endfor %}
         </div>
@@ -50,7 +50,8 @@ block content %} {% include "admin/admin_wrapper.html" %}
       <div>
         <div class="form-group">
           <label for="exampleInputName1"
-            >Subject Name <span class="required">*</span></label
+            >Subject Name (Max 50 letters)
+            <span class="required">*</span></label
           >
           <input
             type="text"
@@ -58,13 +59,15 @@ block content %} {% include "admin/admin_wrapper.html" %}
             id="exampleInputName1"
             name="name"
             aria-describedby="nameHelp"
+            maxlength="50"
             placeholder="Enter Subject Name"
             value="{{ sub.name if sub else '' }}"
           />
         </div>
         <div class="form-group">
           <label for="exampleInputDescription1"
-            >Subject Description <span class="required">*</span></label
+            >Subject Description (Max 300 letters)
+            <span class="required">*</span></label
           >
           <input
             type="text"
@@ -72,6 +75,7 @@ block content %} {% include "admin/admin_wrapper.html" %}
             name="description"
             multiple
             min="4"
+            maxlength="300"
             value="{{ sub.description if sub else '' }}"
             id="exampleInputDescription1"
             placeholder="Enter Subject Description"
@@ -79,13 +83,15 @@ block content %} {% include "admin/admin_wrapper.html" %}
         </div>
         <div class="form-group">
           <label for="exampleInputCode1"
-            >Subject Code <span class="required">*</span></label
+            >Subject Code (4 letters only)
+            <span class="required">*</span></label
           >
           <input
             type="text"
             class="form-control"
             id="exampleInputCode1"
             name="code"
+            maxlength="4"
             value="{{ sub.code if sub else '' }}"
             placeholder="Enter Subject Code"
           />
