--- a/templates/user/user_chapter.html
+++ b/templates/user/user_chapter.html
@@ -1,13 +1,13 @@
-{% extends "base.html" %} {% block title %}Single Subject{% endblock %} {% block
-content %}{% include "admin/admin_wrapper.html" %}
-<section class="p-3">
+{% extends "base.html" %} {% block title %}Chapter Page{% endblock %} {% block
+content %} {% include "user/user_wrapper.html" %}
+<section class="min-vh-100 p-4">
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="/admin">Home</a></li>
       <li class="breadcrumb-item">
-        <a href="/admin/subject/?skip=0&take=25">Subjects List</a>
+        <a href="/user/subjects?skip=0&take=25">Subjects List</a>
       </li>
-      <li class="breadcrumb-item active" aria-current="page">
+      <li class="breadcrumb-item" aria-current="page">
         {% if sub %}{{ sub.code }}{% else %} {% endif %}
       </li>
     </ol>
@@ -54,14 +54,14 @@ content %}{% include "admin/admin_wrapper.html" %}
                 %}N/a{% endif %}
               </p>
               <p class="col-12 col-sm-6">
-                <strong>Last Updated At:</strong> {% if sub %}{{ sub.updated_at
-                }}{% else %}N/a{% endif %}
+                <strong>Last Updated At:</strong> {% if sub %}{{
+                sub.updated_at.strftime('%Y-%m-%d') }}{% else %}N/a{% endif %}
               </p>
             </div>
             <div class="row">
               <p class="col-12 col-sm-6">
-                <strong>Created At:</strong> {% if sub %}{{ sub.created_at }}{%
-                else %}N/a{% endif %}
+                <strong>Created At:</strong> {% if sub %}{{
+                sub.created_at.strftime('%Y-%m-%d') }}{% else %}N/a{% endif %}
               </p>
             </div>
           </div>
@@ -72,12 +72,15 @@ content %}{% include "admin/admin_wrapper.html" %}
 
   <div class="d-flex mt-3 flex-wrap justify-content-between">
     <div>
-      <h3>Chapter Management</h3>
+      <h3>Chapter List</h3>
       <div class="d-flex align-items-center">
-        <p class="mr-4">Total Rows: {{ total_rows }}</p>
+        <p class="mr-4">Total Rows: <strong>{{ total_rows }}</strong></p>
         <p>
-          Current Page: {% if skip and take %} {{ ((skip|int)//take)+1 }} {%
-          else %}1{% endif %}
+          Current Page:
+          <strong
+            >{% if skip and take %} {{ ((skip|int)/take)+1 }} {% else %}1{%
+            endif %}</strong
+          >
         </p>
       </div>
     </div>
@@ -90,14 +93,6 @@ content %}{% include "admin/admin_wrapper.html" %}
           data-target="#exampleModalScrollable"
         >
           View Subject
-        </button>
-        <button type="button" class="btn btn-primary mr-3">
-          <a
-            class="text-white"
-            href="/admin/subject/chapter/new?sub_id={{ sub.id }}"
-          >
-            New Chapter
-          </a>
         </button>
       </div>
       <div class="d-flex mt-2 mt-sm-0 justify-content-between">
@@ -156,16 +151,15 @@ content %}{% include "admin/admin_wrapper.html" %}
             <th scope="col">Chapter number</th>
             <th scope="col">Created At</th>
             <th scope="col">Updated At</th>
-            <th scope="col">Action</th>
           </tr>
         </thead>
         <tbody>
-          {% for chpt in chapters %}
+          {% for chpt in rows %}
           <tr class="pointer">
             <th scope="row">{{ loop.index+skip }}</th>
             <td class="link">
               <a
-                href="/admin/subject/chapter/view?sub_id={{ sub.id }}&skip=0&take=25&chap_id={{ chpt.id }}"
+                href="/user/subject/chapter/view?sub_id={{ sub.id }}&skip=0&take=25&chap_id={{ chpt.id }}"
                 >{{ chpt.code }}</a
               >
             </td>
@@ -173,24 +167,8 @@ content %}{% include "admin/admin_wrapper.html" %}
             <td>{{ chpt.description }}</td>
             <td>{{ chpt.pages }}</td>
             <td>{{ chpt.chapter_number }}</td>
-            <td>{{ chpt.created_at }}</td>
-            <td>{{ chpt.updated_at }}</td>
-            <td>
-              <button
-                onclick="window.location.href='/admin/subject/chapter/update?chap_id={{ chpt.id }}&sub_id={{ sub.id }}'"
-                type="button"
-                class="btn btn-secondary mr-3 mb-3"
-              >
-                Update
-              </button>
-              <form
-                method="post"
-                action="/admin/subject/chapter/delete?sub_id={{ sub.id }}&chapter_id={{ chpt.id }}"
-                onsubmit="return confirm('Are you sure you wish to delete the chapter with {{sub.code}}?, !! This will delete all quizzes and questions associated with it !!');"
-              >
-                <input type="submit" class="btn btn-danger" value="Delete" />
-              </form>
-            </td>
+            <td>{{ chpt.created_at.strftime('%Y-%m-%d') }}</td>
+            <td>{{ chpt.updated_at.strftime('%Y-%m-%d') }}</td>
           </tr>
           {% endfor %}
         </tbody>
@@ -200,7 +178,7 @@ content %}{% include "admin/admin_wrapper.html" %}
           <li class="page-item">
             <a
               class="page-link"
-              href="/admin/subject/view?sub_id={{ sub.id }}&skip={{ (skip - take) if skip > 0 else 0 }}&take={{ take }}"
+              href="/user/subject/view?sub_id={{ sub.id }}&skip={{ (skip - take) if skip > 0 else 0 }}&take={{ take }}"
               aria-label="Previous"
             >
               <span aria-hidden="true">&laquo;</span>
@@ -212,7 +190,7 @@ content %}{% include "admin/admin_wrapper.html" %}
           <li class="page-item">
             <a
               class="page-link"
-              href="/admin/subject/view?sub_id={{ sub.id }}&skip={{ ( ((skip//take)+1)*take if ((skip|int+take) < total_rows) else None  ) if ((skip|int+take) < total_rows) else 0 }}&take={{ take }}"
+              href="/user/subject/view?sub_id={{ sub.id }}&skip={{ ( (((skip|int)/take)+1)*take if ((skip|int+take) < total_rows) else None  ) if ((skip|int+take) < total_rows) else 0 }}&take={{ take }}"
               aria-label="Next"
             >
               <span
@@ -227,6 +205,7 @@ content %}{% include "admin/admin_wrapper.html" %}
     </div>
   </section>
 </section>
+{% endblock %} {% block scripts %}
 <script>
   const url = new URL(window.location.href);
   let showWhere = url.searchParams.get("where");
@@ -242,9 +221,9 @@ content %}{% include "admin/admin_wrapper.html" %}
     if (searchTerm) {
       queryParams +=
         "&where=" + encodeURIComponent(JSON.stringify({ name: searchTerm }));
-      window.location.href = "/admin/subject/view" + queryParams;
+      window.location.href = "/user/subject/view" + queryParams;
     } else {
-      window.location.href = "/admin/subject/view" + queryParams;
+      window.location.href = "/user/subject/view" + queryParams;
     }
   }
 </script>
