--- a/templates/admin/admin.html
+++ b/templates/admin/admin.html
@@ -19,7 +19,7 @@ content %} {% include "admin/admin_wrapper.html" %}
 
   <div class="chart-groups">
     <div class="chart-container">
-      <h4>User Growth in {{ current_month }}</h4>
+      <h4>User Growth in {{ current_month }} {{ current_year }}</h4>
       <canvas id="userGrowthChart"></canvas>
     </div>
     <div class="chart-container">
@@ -78,7 +78,7 @@ content %} {% include "admin/admin_wrapper.html" %}
     },
   });
 
-  var dailyQuizData = JSON.parse(`{{ quiz_growth_data|tojson }}`);
+  var dailyQuizData = JSON.parse(`{{ score_growth_data|tojson }}`);
   new Chart(document.getElementById("dailyQuizzesChart"), {
     type: "bar",
     data: {
