--- a/templates/user/user.html
+++ b/templates/user/user.html
@@ -30,7 +30,7 @@ content %} {% include "user/user_wrapper.html" %}
   <h4>User Dashboard</h4>
   <div class="chart-groups">
     <div class="chart-container">
-      <h4>Score in {{ current_month }}</h4>
+      <h4>Score Performance</h4>
       <canvas id="performanceChart"></canvas>
     </div>
     <div class="chart-container">
