--- a/templates/admin/dashboard/user.html
+++ b/templates/admin/dashboard/user.html
@@ -41,7 +41,7 @@ content %} {% include "admin/admin_wrapper.html" %}
   <h4>User Dashboard</h4>
   <div class="chart-groups">
     <div class="chart-container">
-      <h4>Score in {{ current_month }}</h4>
+      <h4>Score Performance</h4>
       <canvas id="performanceChart"></canvas>
     </div>
     <div class="chart-container">
