--- a/templates/admin/quiz/admin_single_quiz.html
+++ b/templates/admin/quiz/admin_single_quiz.html
@@ -306,6 +306,7 @@ content %}{% include "admin/admin_wrapper.html" %}
               </button>
               <form
                 method="post"
+                action="/admin/subject/chapter/quiz/question/delete?sub_id={{ sub.id }}&quiz_id={{ quiz.id }}&chap_id={{ chap.id }}&question_id={{ question.id }}"
                 onsubmit="return confirm('Are you sure you wish to delete the quiz with {{sub.code}}?, !! This will delete all questions associated with it !!');"
               >
                 <input type="submit" class="btn btn-danger" value="Delete" />
